Added smooth scroll and final footer layout

--- a/index.html
+++ b/index.html
@@ -3,36 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Agency Landing Page</title>
+    <title>Digital Agency | App Landing Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <section id="header">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="#"><img src="images/demo-logo.png" alt="Logo"></a>
+    <section id="nav-bar">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="images/demo-logo.png"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <i class="fa fa-bars"></i>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#top">HOME</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
                         <li class="nav-item"><a class="nav-link" href="#services">SERVICES</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about-us">ABOUT US</a></li>
                         <li class="nav-item"><a class="nav-link" href="#testimonials">TESTIMONIALS</a></li>
                         <li class="nav-item"><a class="nav-link" href="#footer">CONTACT</a></li>
                     </ul>
                 </div>
-            </nav>
-        </div>
+            </div>
+        </nav>
+    </section>
 
-        <div class="container hero-content">
-            <div class="row align-items-center">
+    <section id="banner">
+        <div class="container">
+            <div class="row">
                 <div class="col-md-6">
-                    <h1>BEST DIGITAL AGENCY</h1>
-                    <p>Subscribe Easy Tutorials YouTube channel to watch more videos on website development, digital marketing, and graphics designing.</p>
+                    <p class="promo-title">BEST DIGITAL AGENCY</p>
+                    <p>Subscribe Easy Tutorials YouTube channel to watch more videos on website development, digital marketing, WordPress and graphics designing.</p>
                     <a href="#"><img src="images/play.png" class="play-btn">Watch Tutorial</a>
                 </div>
                 <div class="col-md-6 text-center">
@@ -45,22 +48,22 @@
 
     <section id="services">
         <div class="container text-center">
-            <h1 class="title">WHAT WE DO?</h1>
-            <div class="row text-center mt-5">
+            <h1 class="title">WHAT WE DO ?</h1>
+            <div class="row text-center">
                 <div class="col-md-4 services">
                     <img src="images/service1.png" class="service-img">
                     <h4>Growth Marketing</h4>
-                    <p>High-quality marketing strategies to scale your business footprint and reach.</p>
+                    <p>Subscribe Easy Tutorials YouTube channel to watch more videos on website development, digital marketing, WordPress and graphics designing.</p>
                 </div>
                 <div class="col-md-4 services">
                     <img src="images/service2.png" class="service-img">
                     <h4>Online Branding</h4>
-                    <p>Creating unique digital identities for modern companies through design.</p>
+                    <p>Subscribe Easy Tutorials YouTube channel to watch more videos on website development, digital marketing, WordPress and graphics designing.</p>
                 </div>
                 <div class="col-md-4 services">
                     <img src="images/service3.png" class="service-img">
                     <h4>Animated Ads</h4>
-                    <p>Engaging visual content and animations to capture audience attention.</p>
+                    <p>Subscribe Easy Tutorials YouTube channel to watch more videos on website development, digital marketing, WordPress and graphics designing.</p>
                 </div>
             </div>
             <button type="button" class="btn btn-primary">All Services</button>
@@ -69,14 +72,15 @@
 
     <section id="about-us">
         <div class="container">
-            <h1 class="title text-center">WHY CHOOSE US?</h1>
-            <div class="row mt-5 align-items-center">
+            <h1 class="title text-center">WHY CHOOSE US ?</h1>
+            <div class="row">
                 <div class="col-md-6 about-us">
                     <p class="about-title">Why we're different</p>
                     <ul>
+                        <li>Understand our client's business goal first</li>
                         <li>Believe in doing business with honesty</li>
                         <li>We deliver on time</li>
-                        <li>We create winning content strategies</li>
+                        <li>We create a winning content strategy</li>
                         <li>We protect your online reputation</li>
                     </ul>
                 </div>
@@ -90,17 +94,31 @@
     <section id="testimonials">
         <div class="container">
             <h1 class="title text-center">WHAT CLIENTS SAY</h1>
-            <div class="row mt-5">
+            <div class="row">
                 <div class="col-md-5 testimonials">
-                    <p>This agency helped us double our traffic in just 3 months. Highly professional!</p>
+                    <p>Subscribe Easy Tutorials YouTube channel to watch more videos on website development, digital marketing, WordPress and graphics designing.</p>
                     <img src="images/user1.jpg">
-                    <p class="user-details"><b>Angelina</b><br>Co-founder at XYZ</p>
+                    <p class="user-details"><b>Angelina</b><br>Co-founder at xyz</p>
                 </div>
                 <div class="col-md-5 testimonials">
-                    <p>Amazing branding work. They truly understood our brand vision from day one.</p>
+                    <p>Subscribe Easy Tutorials YouTube channel to watch more videos on website development, digital marketing, WordPress and graphics designing.</p>
                     <img src="images/user2.jpg">
-                    <p class="user-details"><b>John Doe</b><br>Director at ABC</p>
+                    <p class="user-details"><b>John Doe</b><br>Director at xyz</p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="social-media">
+        <div class="container text-center">
+            <p>FIND US ON SOCIAL MEDIA</p>
+            <div class="social-icons">
+                <a href="#"><img src="images/facebook-icon.png"></a>
+                <a href="#"><img src="images/instagram-icon.png"></a>
+                <a href="#"><img src="images/twitter-icon.png"></a>
+                <a href="#"><img src="images/whatsapp-icon.png"></a>
+                <a href="#"><img src="images/linkedin-icon.png"></a>
+                <a href="#"><img src="images/snapchat-icon.png"></a>
             </div>
         </div>
     </section>
@@ -111,25 +129,36 @@
             <div class="row">
                 <div class="col-md-4 footer-box">
                     <img src="images/demo-logo.png">
-                    <p>Building digital excellence for a better future. Join us today.</p>
+                    <p>Subscribe Easy Tutorials YouTube channel to watch more videos on website development, digital marketing, WordPress and graphics designing and press the bell icon to get immediate notification.</p>
                 </div>
                 <div class="col-md-4 footer-box">
                     <p><b>CONTACT US</b></p>
-                    <p>📍 World Trade Centre, Bangalore</p>
-                    <p>📞 +1 0123456789</p>
-                    <p>✉️ xyz@gmail.com</p>
+                    <p><i class="fa fa-map-marker"></i> World Trade Centre, Bangalore</p>
+                    <p><i class="fa fa-phone"></i> +1 0123456789</p>
+                    <p><i class="fa fa-envelope"></i> xyz@gmail.com</p>
                 </div>
                 <div class="col-md-4 footer-box">
-                    <p><b>SUBSCRIBE</b></p>
-                    <input type="email" class="form-control" placeholder="Your Email">
-                    <button type="button" class="btn btn-primary mt-2">Subscribe</button>
+                    <p><b>GET IN TOUCH</b></p>
+                    <input type="email" class="form-control" placeholder="Your email">
+                    <button type="button" class="btn btn-primary">Subscribe</button>
                 </div>
             </div>
             <hr>
-            <p class="copyright text-center">Website Created by Easy Tutorials</p>
+            <p class="copyright">Website Created by Easy Tutorials</p>
         </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+    </script>
 </body>
 </html>
