--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#banner">HOME</a></li>
                         <li class="nav-item"><a class="nav-link" href="#services">SERVICES</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about-us">ABOUT US</a></li>
                         <li class="nav-item"><a class="nav-link" href="#testimonials">TESTIMONIALS</a></li>
@@ -149,11 +149,11 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script>
+
+    <script>
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
-
                 document.querySelector(this.getAttribute('href')).scrollIntoView({
                     behavior: 'smooth'
                 });
